--- a/static/style.css
+++ b/static/style.css
@@ -31,7 +31,6 @@ li {
     max-width: 500px;
 }
 
-
 li div {
     flex-grow: 1;
 }
@@ -49,7 +48,7 @@ a:hover {
     background-color: #7289da;
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 8px 17px;
     border-radius: 5px;
     cursor: pointer;
     text-decoration: none;
@@ -57,6 +56,20 @@ a:hover {
 
 .download-button:hover {
     background-color: #5b6eae;
+}
+
+.delete-button {
+    background-color: #ff4d4d;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.delete-button:hover {
+    background-color: #cc3333;
 }
 
 .upload-form {
